--- a/settings.json
+++ b/settings.json
@@ -49,8 +49,7 @@
   },
 
   "agent": {
-    "use_modifier_to_send": true,
-    "default_profile": "ask",
+    "default_profile": "write",
     "model_parameters": [{ "temperature": 0.7 }],
     "default_model": {
       "provider": "copilot_chat",
